--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "resume"]
-	path = resume
+[submodule "assets/resume"]
+	path = assets/resume
 	url = git://github.com/bcomnes/Resume.git
