Variablized brand.  Added post section comments
Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,7 @@ url: www.bre.tc
 paginate: 3 
 permalink: pretty
 markdown: rdiscount
+
+author: "Bret Comnes"
+description: "A Personal Website and Blog"
+brand: "&#916;"
