Added the GH-Pages config settings
No sense trying to do more than I want to

Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,9 @@ url: www.bre.tc
 paginate: 3 
 permalink: pretty
 markdown: rdiscount
+safe: true
+lsi: false
+pygments: true
 
 author: "Bret Comnes"
 description: "A Personal Website and Blog"
