Added humans.txt and robots.txt
http://www.robotstxt.org/robotstxt.html
http://humanstxt.org/Standard.html

Signed-off-by: Bret Comnes <bcomnes@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -8,5 +8,6 @@ pygments: true
 
 author: "Bret Comnes"
 description: "A Personal Website and Blog"
+location: "Portland, OR"
 brand: "&#916;"
 marker: "&rarr;"
