--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,49 @@ markdown: rdiscount
 safe: true
 lsi: false
 pygments: true
+auto: true
+server: true
+server_port: 4000
+future: false
+
+source:      .
+destination: ./_site
+plugins:     ./_plugins
+
 
 author: "Bret Comnes"
 description: "A Personal Website and Blog"
 location: "Portland, OR"
-brand: "&#916;"
-marker: "&rarr;"
+brand: "bre.tc"  # This is displays in the navbar
+permalink_marker: "&#916;"  # This is the permalink marker. 
+linklog: "&rarr;"	# This is the little indicator next to link-log posts
 
 recent_posts: 10
+
+maruku:
+  use_tex:    false
+  use_divs:   false
+  png_engine: blahtex
+  png_dir:    images/latex
+  png_url:    /images/latex
+
+rdiscount:
+  extensions: []
+
+redcarpet:
+  extensions: []
+
+kramdown:
+  auto_ids: true,
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  use_coderay: false
+  
+  coderay:
+    coderay_wrap: div
+    coderay_line_numbers: inline
+    coderay_line_numbers_start: 1
+    coderay_tab_width: 4
+    coderay_bold_every: 10
+    coderay_css: style
