trying a different linklog marker

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: "A Personal Website and Blog"
 location: "Portland, OR"
 brand: "bre.tc"  # This is displays in the navbar
 permalink_marker: "&#916;"  # This is the permalink marker. 
-linklog: "&rarr;"	# This is the little indicator next to link-log posts
+linklog: "&#8620;"	# This is the little indicator next to link-log posts
 
 recent_posts: 10
 
