--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ plugins:     ./_plugins
 author: "Bret Comnes"
 description: "A Personal Website and Blog"
 location: "Portland, OR"
-brand: "bre.tc"  # This is displays in the navbar
+brand: "bret.io"  # This is displays in the navbar
 permalink_marker: "&#916;"  # This is the permalink marker. 
 linklog: "&#8620;"	# This is the little indicator next to link-log posts
 
