Ignored a bunch of crap

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,193 @@ _site/
 bre.tc.tmproj
 .tm_properties
 .DS_Store
+components/jquery/.gitignore
+components/jquery/README.md
+components/jquery/package.json
+components/bootstrap/.gitignore
+components/bootstrap/.travis.yml
+components/bootstrap/CHANGELOG.md
+components/bootstrap/CONTRIBUTING.md
+components/bootstrap/LICENSE
+components/bootstrap/Makefile
+components/bootstrap/README.md
+components/bootstrap/component.json
+components/bootstrap/composer.json
+components/bootstrap/docs/assets/css/bootstrap-responsive.css
+components/bootstrap/docs/assets/css/bootstrap.css
+components/bootstrap/docs/assets/css/docs.css
+components/bootstrap/docs/assets/ico/apple-touch-icon-114-precomposed.png
+components/bootstrap/docs/assets/ico/apple-touch-icon-144-precomposed.png
+components/bootstrap/docs/assets/ico/apple-touch-icon-57-precomposed.png
+components/bootstrap/docs/assets/ico/apple-touch-icon-72-precomposed.png
+components/bootstrap/docs/assets/ico/favicon.ico
+components/bootstrap/docs/assets/ico/favicon.png
+components/bootstrap/docs/assets/img/bootstrap-docs-readme.png
+components/bootstrap/docs/assets/img/bootstrap-mdo-sfmoma-01.jpg
+components/bootstrap/docs/assets/img/bootstrap-mdo-sfmoma-02.jpg
+components/bootstrap/docs/assets/img/bootstrap-mdo-sfmoma-03.jpg
+components/bootstrap/docs/assets/img/bs-docs-bootstrap-features.png
+components/bootstrap/docs/assets/img/bs-docs-masthead-pattern.png
+components/bootstrap/docs/assets/img/bs-docs-responsive-illustrations.png
+components/bootstrap/docs/assets/img/bs-docs-twitter-github.png
+components/bootstrap/docs/assets/img/example-sites/8020select.png
+components/bootstrap/docs/assets/img/example-sites/adoptahydrant.png
+components/bootstrap/docs/assets/img/example-sites/breakingnews.png
+components/bootstrap/docs/assets/img/example-sites/fleetio.png
+components/bootstrap/docs/assets/img/example-sites/gathercontent.png
+components/bootstrap/docs/assets/img/example-sites/jshint.png
+components/bootstrap/docs/assets/img/example-sites/kippt.png
+components/bootstrap/docs/assets/img/example-sites/soundready.png
+components/bootstrap/docs/assets/img/examples/bootstrap-example-carousel.png
+components/bootstrap/docs/assets/img/examples/bootstrap-example-fluid.png
+components/bootstrap/docs/assets/img/examples/bootstrap-example-justified-nav.png
+components/bootstrap/docs/assets/img/examples/bootstrap-example-marketing-narrow.png
+components/bootstrap/docs/assets/img/examples/bootstrap-example-marketing.png
+components/bootstrap/docs/assets/img/examples/bootstrap-example-signin.png
+components/bootstrap/docs/assets/img/examples/bootstrap-example-starter.png
+components/bootstrap/docs/assets/img/examples/bootstrap-example-sticky-footer.png
+components/bootstrap/docs/assets/img/examples/browser-icon-chrome.png
+components/bootstrap/docs/assets/img/examples/browser-icon-firefox.png
+components/bootstrap/docs/assets/img/examples/browser-icon-safari.png
+components/bootstrap/docs/assets/img/examples/slide-01.jpg
+components/bootstrap/docs/assets/img/examples/slide-02.jpg
+components/bootstrap/docs/assets/img/examples/slide-03.jpg
+components/bootstrap/docs/assets/img/glyphicons-halflings-white.png
+components/bootstrap/docs/assets/img/glyphicons-halflings.png
+components/bootstrap/docs/assets/img/grid-baseline-20px.png
+components/bootstrap/docs/assets/img/less-logo-large.png
+components/bootstrap/docs/assets/img/responsive-illustrations.png
+components/bootstrap/docs/assets/js/README.md
+components/bootstrap/docs/assets/js/application.js
+components/bootstrap/docs/assets/js/bootstrap-affix.js
+components/bootstrap/docs/assets/js/bootstrap-alert.js
+components/bootstrap/docs/assets/js/bootstrap-button.js
+components/bootstrap/docs/assets/js/bootstrap-carousel.js
+components/bootstrap/docs/assets/js/bootstrap-collapse.js
+components/bootstrap/docs/assets/js/bootstrap-dropdown.js
+components/bootstrap/docs/assets/js/bootstrap-modal.js
+components/bootstrap/docs/assets/js/bootstrap-popover.js
+components/bootstrap/docs/assets/js/bootstrap-scrollspy.js
+components/bootstrap/docs/assets/js/bootstrap-tab.js
+components/bootstrap/docs/assets/js/bootstrap-tooltip.js
+components/bootstrap/docs/assets/js/bootstrap-transition.js
+components/bootstrap/docs/assets/js/bootstrap-typeahead.js
+components/bootstrap/docs/assets/js/bootstrap.js
+components/bootstrap/docs/assets/js/bootstrap.min.js
+components/bootstrap/docs/assets/js/google-code-prettify/prettify.css
+components/bootstrap/docs/assets/js/google-code-prettify/prettify.js
+components/bootstrap/docs/assets/js/holder/holder.js
+components/bootstrap/docs/assets/js/html5shiv.js
+components/bootstrap/docs/assets/js/jquery.js
+components/bootstrap/docs/base-css.html
+components/bootstrap/docs/build/index.js
+components/bootstrap/docs/build/package.json
+components/bootstrap/docs/components.html
+components/bootstrap/docs/customize.html
+components/bootstrap/docs/examples/carousel.html
+components/bootstrap/docs/examples/fluid.html
+components/bootstrap/docs/examples/hero.html
+components/bootstrap/docs/examples/justified-nav.html
+components/bootstrap/docs/examples/marketing-narrow.html
+components/bootstrap/docs/examples/signin.html
+components/bootstrap/docs/examples/starter-template.html
+components/bootstrap/docs/examples/sticky-footer-navbar.html
+components/bootstrap/docs/examples/sticky-footer.html
+components/bootstrap/docs/extend.html
+components/bootstrap/docs/getting-started.html
+components/bootstrap/docs/index.html
+components/bootstrap/docs/javascript.html
+components/bootstrap/docs/scaffolding.html
+components/bootstrap/docs/templates/layout.mustache
+components/bootstrap/docs/templates/pages/base-css.mustache
+components/bootstrap/docs/templates/pages/components.mustache
+components/bootstrap/docs/templates/pages/customize.mustache
+components/bootstrap/docs/templates/pages/extend.mustache
+components/bootstrap/docs/templates/pages/getting-started.mustache
+components/bootstrap/docs/templates/pages/index.mustache
+components/bootstrap/docs/templates/pages/javascript.mustache
+components/bootstrap/docs/templates/pages/scaffolding.mustache
+components/bootstrap/js/.jshintrc
+components/bootstrap/js/bootstrap-affix.js
+components/bootstrap/js/bootstrap-alert.js
+components/bootstrap/js/bootstrap-button.js
+components/bootstrap/js/bootstrap-carousel.js
+components/bootstrap/js/bootstrap-collapse.js
+components/bootstrap/js/bootstrap-dropdown.js
+components/bootstrap/js/bootstrap-modal.js
+components/bootstrap/js/bootstrap-popover.js
+components/bootstrap/js/bootstrap-scrollspy.js
+components/bootstrap/js/bootstrap-tab.js
+components/bootstrap/js/bootstrap-tooltip.js
+components/bootstrap/js/bootstrap-transition.js
+components/bootstrap/js/bootstrap-typeahead.js
+components/bootstrap/js/tests/index.html
+components/bootstrap/js/tests/phantom.js
+components/bootstrap/js/tests/server.js
+components/bootstrap/js/tests/unit/bootstrap-affix.js
+components/bootstrap/js/tests/unit/bootstrap-alert.js
+components/bootstrap/js/tests/unit/bootstrap-button.js
+components/bootstrap/js/tests/unit/bootstrap-carousel.js
+components/bootstrap/js/tests/unit/bootstrap-collapse.js
+components/bootstrap/js/tests/unit/bootstrap-dropdown.js
+components/bootstrap/js/tests/unit/bootstrap-modal.js
+components/bootstrap/js/tests/unit/bootstrap-phantom.js
+components/bootstrap/js/tests/unit/bootstrap-popover.js
+components/bootstrap/js/tests/unit/bootstrap-scrollspy.js
+components/bootstrap/js/tests/unit/bootstrap-tab.js
+components/bootstrap/js/tests/unit/bootstrap-tooltip.js
+components/bootstrap/js/tests/unit/bootstrap-transition.js
+components/bootstrap/js/tests/unit/bootstrap-typeahead.js
+components/bootstrap/js/tests/vendor/jquery.js
+components/bootstrap/js/tests/vendor/qunit.css
+components/bootstrap/js/tests/vendor/qunit.js
+components/bootstrap/less/accordion.less
+components/bootstrap/less/alerts.less
+components/bootstrap/less/bootstrap.less
+components/bootstrap/less/breadcrumbs.less
+components/bootstrap/less/button-groups.less
+components/bootstrap/less/buttons.less
+components/bootstrap/less/carousel.less
+components/bootstrap/less/close.less
+components/bootstrap/less/code.less
+components/bootstrap/less/component-animations.less
+components/bootstrap/less/dropdowns.less
+components/bootstrap/less/forms.less
+components/bootstrap/less/grid.less
+components/bootstrap/less/hero-unit.less
+components/bootstrap/less/labels-badges.less
+components/bootstrap/less/layouts.less
+components/bootstrap/less/media.less
+components/bootstrap/less/mixins.less
+components/bootstrap/less/modals.less
+components/bootstrap/less/navbar.less
+components/bootstrap/less/navs.less
+components/bootstrap/less/pager.less
+components/bootstrap/less/pagination.less
+components/bootstrap/less/popovers.less
+components/bootstrap/less/progress-bars.less
+components/bootstrap/less/reset.less
+components/bootstrap/less/responsive-1200px-min.less
+components/bootstrap/less/responsive-767px-max.less
+components/bootstrap/less/responsive-768px-979px.less
+components/bootstrap/less/responsive-navbar.less
+components/bootstrap/less/responsive-utilities.less
+components/bootstrap/less/responsive.less
+components/bootstrap/less/scaffolding.less
+components/bootstrap/less/sprites.less
+components/bootstrap/less/tables.less
+components/bootstrap/less/tests/buttons.html
+components/bootstrap/less/tests/css-tests.css
+components/bootstrap/less/tests/css-tests.html
+components/bootstrap/less/tests/forms-responsive.html
+components/bootstrap/less/tests/forms.html
+components/bootstrap/less/tests/navbar-fixed-top.html
+components/bootstrap/less/tests/navbar-static-top.html
+components/bootstrap/less/tests/navbar.html
+components/bootstrap/less/thumbnails.less
+components/bootstrap/less/tooltip.less
+components/bootstrap/less/type.less
+components/bootstrap/less/utilities.less
+components/bootstrap/less/variables.less
+components/bootstrap/less/wells.less
+components/bootstrap/package.json
