Added sample prose config stuff

--- a/_config.yml
+++ b/_config.yml
@@ -50,3 +50,37 @@ kramdown:
     coderay_tab_width: 4
     coderay_bold_every: 10
     coderay_css: style
+
+# Prose stuff
+siteurl: "http://bret.io"
+media: "/media"
+
+prose:
+  metadata:
+    _posts:
+      - name: "categories"
+        field:
+          element: "hidden"
+          value:
+            - "post"
+      - name: "layout"
+        field:
+          element: "text"
+          label: "Layout"
+          value: "default"
+      - name: "order"
+        field:
+          element: "number"
+          label: "Order"
+          value: 0
+      - name: "item"
+        field:
+          element: "select"
+          label: "Item"
+          placeholder: "Select an Item"
+          options:
+            - name: "Item 1"
+              value: "item1"
+            - name: "Item 2"
+              value: "item2"
+          selected: "item2"
