--- a/_config.yml
+++ b/_config.yml
@@ -66,10 +66,6 @@ prose:
           options:
             - name: "Article"
               value: "article"
-              - name: "title"
-                field:
-                  element: "text"
-                  label: "Title"
             - name: "Linklog"
               value: "linklog"
             - name: "Note"
@@ -78,4 +74,13 @@ prose:
       - name: "tags"
         field:
           element: "text"
-          label: "Tag"
+          label: "Tags"
+      - name: "title"
+        field:
+          element: "text"
+          label: "Title"
+      - name: "date"
+        field:
+          element: "text"
+          label: "Date: YYYY-MM-DD HH:MM"
+          
