--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,7 @@ prose:
         field:
           element: "text"
           label: "Date: YYYY-MM-DD HH:MM"
+          value: CURRENT_DATETIME
       - name: "tags"
         field:
           element: "multiselect"
@@ -89,6 +90,7 @@ prose:
         field:
           element: "text"
           label: "Date: YYYY-MM-DD HH:MM"
+          value: CURRENT_DATETIME
       - name: "tags"
         field:
           element: "multiselect"
@@ -116,6 +118,7 @@ prose:
         field:
           element: "text"
           label: "Date: YYYY-MM-DD HH:MM"
+          value: CURRENT_DATETIME
       - name: "tags"
         field:
           element: "multiselect"
