--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ lsi: false
 pygments: true
 port: 4000
 future: false
-exclude: [categories.html, Gemfile, Gemfile.lock, README.md, vendor]
+exclude: [categories.html, Gemfile, Gemfile.lock, README.md, vendor, cache.manifest]
 
 source:      .
 destination: ./_site
