Added rsvp field

--- a/_config.yml
+++ b/_config.yml
@@ -105,6 +105,17 @@ prose:
         field:
           element: "text"
           label: "Name of reply"
+      - name: "rsvp"
+        field:
+          element: "select"
+          label: "RSVP"
+		  options:
+		    - name: 'Yes'
+		      value: 'yes'
+		    - name: 'No'
+		      value: 'no'
+		    - name: 'Maybe'
+		      value: 'maybe'
     _posts/linklogs:
       - name: "layout"
         field:
