--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ safe: true
 lsi: false
 pygments: true
 port: 4000
-future: false
+future: true
 exclude: [categories.html, Gemfile, Gemfile.lock, README.md, vendor, cache.manifest]
 
 source:      .
