Added .well-known to include list

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ pygments: true
 port: 4000
 future: true
 exclude: [categories.html, Gemfile, Gemfile.lock, README.md, vendor, cache.manifest]
+include: [".well-known"]
 
 source:      .
 destination: ./_site
