--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,11 @@ linklog: "&#8620;"	# This is the little indicator next to link-log posts
 
 recent_posts: 10
 
+gems:
+- jekyll-mentions\
+- jemoji
+- jekyll-redirect-from
+
 maruku:
   use_tex:    false
   use_divs:   false
