--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ linklog: "&#8620;"	# This is the little indicator next to link-log posts
 recent_posts: 10
 
 gems:
-- jekyll-mentions\
+- jekyll-mentions
 - jemoji
 - jekyll-redirect-from
 
@@ -48,7 +48,7 @@ kramdown:
   entity_output: as_char
   toc_levels: 1..6
   use_coderay: false
-  
+
   coderay:
     coderay_wrap: div
     coderay_line_numbers: inline
