--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ linklog: "&#8620;"	# This is the little indicator next to link-log posts
 recent_posts: 10
 
 gems:
-- jekyll-mentions
+#- jekyll-mentions
 - jemoji
 - jekyll-redirect-from
 
