--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ port: 4000
 future: true
 exclude: [categories.html, Gemfile, Gemfile.lock, README.md, vendor, cache.manifest]
 include: [".well-known"]
-permalink: /:year/:month/:day/:title.html
+permalink: /:year/:month/:day/:title/
 
 source:      .
 destination: ./_site
