--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ future: true
 exclude: [categories.html, Gemfile, Gemfile.lock, README.md, vendor, cache.manifest]
 include: [".well-known"]
 permalink: /:year/:month/:day/:title/
+relative_permalinks: true
 
 source:      .
 destination: ./_site
