--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ defaults:
       path: "" # an empty string here means all files in the project
       type: "post"
     values:
-      permalink: '/:year/:month/:day/:title/'
+      permalink: /:year/:month/:day/:title/
 
 author: "Bret Comnes"
 description: "A Personal Website and Blog"
