--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 url: bret.io
 paginate: 10
-permalink: /:categories/:year/:month/:day/:title/
+permalink: /:year/:month/:day/:title/
 markdown: rdiscount
 safe: true
 lsi: false
