--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 url: bret.io
 paginate: 10
 permalink: pretty
-markdown: rdiscount
+markdown: kramdown
 safe: true
 lsi: false
 highlighter: pygments
@@ -55,6 +55,7 @@ kramdown:
   entity_output: as_char
   toc_levels: 1..6
   use_coderay: false
+  input: GFM
 
   coderay:
     coderay_wrap: div
@@ -64,80 +65,3 @@ kramdown:
     coderay_bold_every: 10
     coderay_css: style
 
-# Prose stuff
-prose:
-  siteurl: http://bret.io
-  #relativeLinks: 'http://bret.io/pages.jsonp'
-  media: 'media'
-  metadata:
-    _posts/articles:
-      - name: "layout"
-        field:
-          element: "hidden"
-          value: "article"
-      - name: "title"
-        field:
-          element: "text"
-          label: "Title"
-      - name: "date"
-        field:
-          element: "text"
-          label: "Date: YYYY-MM-DD HH:MM"
-          value: CURRENT_DATETIME
-      - name: "tags"
-        field:
-          element: "multiselect"
-          label: "Tags"
-          options: 'http://bret.io/pages/tags.jsonp'
-          alterable: true
-    _posts/notes:
-      - name: "layout"
-        field:
-          element: "hidden"
-          value: "note"
-      - name: "title"
-        field:
-          element: "text"
-          label: "Title"
-      - name: "date"
-        field:
-          element: "text"
-          label: "Date: YYYY-MM-DD HH:MM"
-      - name: "tags"
-        field:
-          element: "multiselect"
-          label: "Tags"
-          options: 'http://bret.io/pages/tags.jsonp'
-          alterable: true
-      - name: "reply_url"
-        field:
-          element: "text"
-          label: "Reply to URL"
-      - name: "reply_title"
-        field:
-          element: "text"
-          label: "Name of reply"
-    _posts/linklog:
-      - name: "layout"
-        field:
-          element: "hidden"
-          value: "linklog"
-      - name: "title"
-        field:
-          element: "text"
-          label: "Title"
-      - name: "date"
-        field:
-          element: "text"
-          label: "Date: YYYY-MM-DD HH:MM"
-          value: CURRENT_DATETIME
-      - name: "tags"
-        field:
-          element: "multiselect"
-          label: "Tags"
-          options: 'http://bret.io/pages/tags.jsonp'
-          alterable: true
-      - name: "external_url"
-        field:
-            element: "text"
-            label: "Link"
